--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+# new
 .firebase
 .firebaserc
 firebase.json
@@ -20,7 +21,7 @@ firebase.json
 .env.development.local
 .env.test.local
 .env.production.local
-/src/firebase.js
+# new
 rough
 /.vscode
 
